@@ -1,0 +1,2 @@
+prog: nocwd
+vgopts: -q --trace-children=yes
